v0.3
- sand texture
- grass texture
- asphalt texture

v0.2
- checked curb heights
- added bankings
- added pits (temporarly disabled)

v0.1
- initial release
- correct height (200ft variaton)
- correct length (2039 m)
- correct barrier placement
- correct curb placement
- correct side widths
