@@ -1,7 +1,6 @@
 TODO
 
 v0.3
-- check friction settings (slippery, rainy?)
 - add pit lane wall
 - custom curbs
 v0.4
