@@ -1,4 +1,5 @@
 v0.3
+- checked friction settings (slippery, rainy?)
 - sand texture
 - grass texture
 - asphalt texture
